# Ultron-Bot-V1

./: README.md  config.json  facts.json  main.py  pyproject.toml
alpha_core/Bot/: runner.py
alpha_core/Resources/Config/: config.py
core/Bot/: runner.py
core/Resources/UltronAI/Layers/profanityAI/: bertia.py
core/Resources/UltronLHS/: anti_handling.py
database/: database.py  guilds.json
delta_core/Routers/: router.py
delta_core/ctx_cogs/moderation/: channel.py  kick-ban.py  mute.py
regent/Routers/: router.py
regent/ctx_cogs/commander/: commander-main.py
regent/ctx_cogs/dev-tools/: devtools.py
regent/ctx_cogs/fun/: humor.py  image-fact.py  linear.py  marveldex.py  math.py
regent/ctx_cogs/general/: meme.py  rands.py
regent/ctx_cogs/moderation/: channel.py  kick-ban.py  member.py  mute.py
regent/ctx_cogs/web-scraping/: dict.py  nasa.py
