[tool.poetry]
name = "repl_python3_Ultron"
version = "0.1.0"
description = ""
authors = ["xyzabc10 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
antispam = "^0.0.10"
gevent = "^21.8.0"
google-api-python-client = "^2.30.0"
grequests = "^0.6.0"
pokebase = "^1.3.0"
ujson = "^4.2.0"
nextcord = {git = "https://github.com/nextcord/nextcord.git", rev = "master"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
