[tool.poetry]
name = "repl_python3_Ultron"
version = "0.1.0"
description = ""
authors = ["xyzabc10 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
antispam = "^0.0.10"
gevent = "^21.8.0"
google-api-python-client = "^2.30.0"
grequests = "^0.6.0"
pokebase = "^1.3.0"
ujson = "^4.2.0"
sympy = "^1.9"
psutil = "^5.8.0"
aas-r = "0.0.5"
PyDictionary = "^2.0.1"
wikipedia = "^1.4.0"
asyncpraw = "^7.5.0"
nextcord = "^2.0.0-alpha.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
